--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "description": "registrar usuarios en uamistream",
     "main": "index.js",
+    "engines": {
+        "node": "14.x",
+        "npm": "6.x"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "public": "copyfiles --up 1 src/public/*.html dist && copyfiles --up 1 -a src/public/assets/* dist",
