--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "public": "copyfiles --up 1 src/public/*.html dist && copyfiles --up 1 -a src/public/assets/* dist && copyfiles --up 1 -a src/public/views/* dist",
+        "build": "tsc && npm run public",
+        "postinstall": "npm run build",
         "start": "node dist/index.js"
     },
     "author": "Alfonso6z",
@@ -17,6 +20,7 @@
         "copyfiles": "^2.4.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "hbs": "^4.1.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "github:mysqljs/mysql",
         "nodemailer": "^6.4.13"
@@ -24,6 +28,7 @@
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
+        "@types/hbs": "^4.0.1",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mysql": "^2.15.15",
         "@types/nodemailer": "^6.4.0"
