--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-    "name": "back-end-uamistream",
+    "name": "rws-uamistream",
     "version": "1.0.0",
     "description": "registrar usuarios en uamistream",
     "main": "index.js",
     "engines": {
         "node": "14.x",
         "npm": "6.x"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Alfonso6z/RWSUamiStream"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
