modificacion de dockercompese de la carpeta de docker y README.md

--- a/docker/application.yml
+++ b/docker/application.yml
@@ -2,9 +2,9 @@ environments:
     production:
         dataSource:
             driverClassName:  'com.mysql.jdbc.Driver'
-            url: jdbc:mysql://MYSQL_SERVER_IP/MYSQL_DATABASE
-            username: MYSQL_USER
-            password: MYSQL_PASSWORD
+            url: jdbc:mysql://172.16.0.2/streama
+            username: streama
+            password: streama_password
         server:
             port: 8080
 
