--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "dev": "cross-env NODE_ENV=developmen nodemon dist/index.js",
         "start": "cross-env NODE_ENV=production node dist/index.js"
     },
-    "author": "Alfonso6z",
+    "author": "Alfonso Gonzalez Zempoalteca",
     "license": "MIT",
     "dependencies": {
         "copyfiles": "^2.4.0",
